[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"          # 高效处理网络 buffer 的库
dashmap = "6.1.0"
http = "1.3.1"
prost = "0.9"        # 处理 protobuf 的代码
rocksdb = "0.24.0"
sled = "0.34.7"
thiserror = "2.0.12"
tracing = "0.1"      # 日志处理


[dev-dependencies]
tempfile = "3.20.0"
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "macros",
  "net",
] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理
tokio-util = { version = "0.6", features = ["codec"] }

[build-dependencies]
prost-build = "0.9" # 编译 protobuf
