[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[[bin]]
name = "kvns"
path = "src/server_noise.rs"

[[bin]]
name = "kvnc"
path = "src/client_noise.rs"

[dependencies]
anyhow = "1" # 错误处理
bytes = "1"       # 高效处理网络 buffer 的库
dashmap = "6.1.0"
flate2 = "1.1.2"
http = "1.3.1"
prost = "0.9"     # 处理 protobuf 的代码
rustls-native-certs = "0.5"
# rocksdb = "0.24.0"
sled = "0.34.7"
snow = "0.10.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
tracing = "0.1"# 日志处理
tracing-subscriber = "0.3"
base64 = "0.13.1" # 日志处理
futures = "0.3"


[dev-dependencies]
tempfile = "3.20.0"
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio-util = { version = "0.6", features = ["codec"] }
certify = "0.6"

[build-dependencies]
prost-build = "0.9" # 编译 protobuf
